--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "npm run clean && parcel public/index.html --out-dir development -p 5000",
         "build": "parcel build public/index.html --out-dir dist --public-url ./",
         "clean": "rimraf ./development && rimraf -rf ./.cache",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "reset": "rm -rf dist",
+        "deploy": "rm -rf dist && npm run build"
     },
     "repository": {
         "type": "git",
